Capitalize drive letters on windows

Capitalize the drive letter on windows. Our documents always have
capital letter because KateDocManager uses Utils::absoluteUrl() when
opening url KateDocManager::openUrl which reconstructs the url using
QFileInfo::absolouteFilePath() which returns a captialized drive letter
according to Qt docs. To match this behaviour, use
QFileInfo::absolouteFilePath() in Utils::normalizeUrl()

BUG: 509085